--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -7,11 +7,13 @@
                     class="button button-outline button--rounded button-outline--primary featured-projects__control
                         featured-projects__control--disabled"
                     id="js-featured-control-prev">
+                    <span class="visually-hidden">Previous project</span>
                     <span class="icon icon--arrow-up"></span>
                 </button>
                 <button
                     class="button button-outline button--rounded button-outline--primary featured-projects__control"
                     id="js-featured-control-next">
+                    <span class="visually-hidden">Next project</span>
                     <span class="icon icon--arrow-down"></span>
                 </button>
             </nav>
