--- a/src/_includes/layouts/partials/footer.njk
+++ b/src/_includes/layouts/partials/footer.njk
@@ -5,8 +5,8 @@
             by Adrian Bece since 2015</p>
         {% include 'layouts/partials/linkList.njk' %}
         <p class="footer__thanks">
-            Special thanks to Vitaly Friedman, Chris Coyier, Josh Comeau, Henri Helvetica, Jen Simmons, Stephanie Eckles, Brad
-            Frost, Addy Osmani, Enno Stuurman, Gatsby team, and my Gin Coding fam for support, motivation and inspiration.
+            Special thanks to Vitaly Friedman, Chris Coyier, Henri Helvetica, Josh Comeau, Jen Simmons, Stephanie Eckles, Brad
+            Frost, Addy Osmani, Enno Stuurman, Gatsby team, Vercel team, and my Gin Coding fam for support and inspiration.
         </p>
         <blockquote class="footer__quote">
             Per aspera ad astra.
