--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,30 +1,12 @@
-@import "_variables.typography.pcss";
-@import "_variables.colors.pcss";
-@import "_variables.spacing.pcss";
-@import "_variables.levels.pcss";
+@import "_variables.media.pcss";
+@import "_layout.footer.pcss";
 
-@import "_vendor.swiper-bundle.pcss";
-
-@import "_setup.page.pcss";
-@import "_setup.icons.pcss";
-@import "_setup.typography.pcss";
-
-@import "_utils.pcss";
-
-@import "_component.button.pcss";
-@import "_component.link.pcss";
 @import "_component.card.pcss";
 
-@import "_layout.footer.pcss";
-@import "_layout.header.pcss";
-
-@import "_block.hero.pcss";
-@import "_block.testimonials.pcss";
-@import "_block.linklist.pcss";
-@import "_block.banner.pcss";
 @import "_block.about.pcss";
+@import "_block.portfolio.pcss";
+@import "_block.testimonials.pcss";
 @import "_block.projects.pcss";
 @import "_block.featured.pcss";
-@import "_block.portfolio.pcss";
 @import "_block.project-summary.pcss";
 @import "_block.project-card.pcss";
