--- a/src/_includes/layouts/partials/hero.njk
+++ b/src/_includes/layouts/partials/hero.njk
@@ -12,7 +12,7 @@
             </ul>
         </article>
         <figure class="hero__figure">
-            {% image "hero-homepage.png", "Adrian Bece portrait image" %}
+            {% image "hero-homepage.png", "Adrian Bece portrait image", "image", "eager", "sync" %}
             {{ '/src/assets/svg/pattern-bg.svg' | svgContents("hero__pattern") | safe }}
         </figure>
     </div>
