--- a/src/assets/css/_block.project-card.pcss
+++ b/src/assets/css/_block.project-card.pcss
@@ -1,17 +1,31 @@
 .project-card {
   transition: opacity 0.25s ease-in-out;
-  position: absolute;
-  top: 50%;
-  transform: translate3d(0, -50%, 0);
-  padding-left: var(--spacing-4);
+  text-align: left;
+  padding: 0 var(--spacing-1) var(--spacing-2);
+
+  @media (--screen-desktop-medium) {
+    padding-bottom: 0;
+    position: absolute;
+    padding-left: var(--spacing-4);
+    transform: translate3d(0, -50%, 0);
+    top: 50%;
+  }
 
   &:not(.project-card--active) {
-    opacity: 0;
+    display: none;
     pointer-events: none;
+    @media (--screen-desktop-medium) {
+      display: block;
+      opacity: 0;
+    }
   }
 
   &--active {
-    opacity: 1;
+    display: block;
+
+    @media (--screen-desktop-medium) {
+      opacity: 1;
+    }
   }
 
   &__tags {
@@ -20,6 +34,14 @@
 
   &__title {
     font-size: var(--font-size-2);
+
+    @media (--screen-phone-large) {
+      padding-right: var(--spacing-6);
+    }
+
+    @media (--screen-desktop-medium) {
+      padding-right: 0;
+    }
   }
 
   &__content {
