--- a/src/assets/css/_component.card.pcss
+++ b/src/assets/css/_component.card.pcss
@@ -1,8 +1,13 @@
 .card {
   padding-bottom: var(--spacing-6);
-  padding-left: var(--spacing-2);
-  padding-right: var(--spacing-2);
+  padding-left: var(--spacing-1);
+  padding-right: var(--spacing-1);
   position: relative;
+
+  @media (--screen-desktop-large) {
+    padding-left: var(--spacing-2);
+    padding-right: var(--spacing-2);
+  }
 
   .card__wrapper {
     max-width: 35ch;
