--- a/src/_includes/layouts/_default/homepage.njk
+++ b/src/_includes/layouts/_default/homepage.njk
@@ -8,8 +8,4 @@ layout: base
 </main>
 {% include 'layouts/partials/footer.njk' %}
 
-<script src="/assets/js/swiper-bundle.min.js"></script>
-
-<script async src="/assets/js/about-slider.js"></script>
-<script async src="/assets/js/featured-slider.js"></script>
-<script async src="/assets/js/testimonials-slider.js"></script>
+<script async src="/assets/js/bundle.js"></script>
