--- a/src/_includes/layouts/_default/homepage.njk
+++ b/src/_includes/layouts/_default/homepage.njk
@@ -7,5 +7,4 @@ layout: base
       {{ content | safe }}
 </main>
 {% include 'layouts/partials/footer.njk' %}
-
-<script async src="/assets/js/bundle.js"></script>
+{% include 'layouts/partials/sliders.njk' %}
