--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -1,22 +1,6 @@
 <section class="u-container-spacing" id="js-portfolio">
     <div class="featured-projects u-container u-container--larger">
         <article class="featured-projects__info">
-            <nav class="featured-projects__controls">
-                <button
-                    disabled
-                    class="button button-outline button--rounded button-outline--primary featured-projects__control
-                        featured-projects__control--disabled"
-                    id="js-featured-control-prev">
-                    <span class="visually-hidden">Previous project</span>
-                    <span class="icon icon--arrow-up"></span>
-                </button>
-                <button
-                    class="button button-outline button--rounded button-outline--primary featured-projects__control"
-                    id="js-featured-control-next">
-                    <span class="visually-hidden">Next project</span>
-                    <span class="icon icon--arrow-down"></span>
-                </button>
-            </nav>
             <div>
                 {% for project in collections.featured %}
                     {% if loop.index === 1 %}
@@ -57,19 +41,35 @@
                 {% endfor %}
             </div>
         </article>
-        <article class="swiper" id="js-featured-images">
-            <div class="u-list-reset swiper-wrapper">
-                {% for project in collections.featured %}
-                    <div class="swiper-slide featured-projects__slide--images">
-                        <a tabindex="-1" href="{{ project.url }}">
-                            <span class="visually-hidden">{{ project.data.title }}</span>
-                            <figure class="featured-projects__figure">
-                                {% image "project-bg.png", "", "featured-projects__image--bg" %}
-                                {% image "portfolio/"+project.data.image, "", "featured-projects__image--main" %}
-                            </figure>
-                        </a>
-                    </div>
-                {% endfor %}
+        <article class="splide" id="js-featured-images">
+            <nav class="featured-projects__controls splide__arrows">
+                <button
+                    disabled
+                    class="splide__arrow splide__arrow--prev button button-outline button--rounded button-outline--primary
+                        featured-projects__control featured-projects__control--disabled">
+                    <span class="visually-hidden">Previous project</span>
+                    <span class="icon icon--arrow-up"></span>
+                </button>
+                <button class="splide__arrow splide__arrow--next button button-outline button--rounded button-outline--primary
+                        featured-projects__control">
+                    <span class="visually-hidden">Next project</span>
+                    <span class="icon icon--arrow-down"></span>
+                </button>
+            </nav>
+            <div class="splide__track">
+                <div class="u-list-reset splide__list">
+                    {% for project in collections.featured %}
+                        <div class="splide__slide featured-projects__slide--images">
+                            <a tabindex="-1" href="{{ project.url }}">
+                                <span class="visually-hidden">{{ project.data.title }}</span>
+                                <figure class="featured-projects__figure">
+                                    {% image "project-bg.png", "", "featured-projects__image--bg" %}
+                                    {% image "portfolio/"+project.data.image, "", "featured-projects__image--main" %}
+                                </figure>
+                            </a>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </article>
     </div>
