--- a/src/assets/css/_block.about.pcss
+++ b/src/assets/css/_block.about.pcss
@@ -1,6 +1,7 @@
 .about {
   margin-top: calc(-1 * var(--spacing-3));
   margin-bottom: var(--spacing-1);
+  position: relative;
 
   @media (--screen-tablet-small) {
     margin-bottom: var(--spacing-3);
