--- a/src/assets/css/_block.project-card.pcss
+++ b/src/assets/css/_block.project-card.pcss
@@ -1,7 +1,7 @@
 .project-card {
   transition: opacity 0.25s ease-in-out;
   text-align: left;
-  padding: 0 var(--spacing-1) var(--spacing-2);
+  padding: 0 var(--spacing-1);
 
   @media (--screen-desktop-medium) {
     padding-bottom: 0;
@@ -17,6 +17,16 @@
     @media (--screen-desktop-medium) {
       display: block;
       opacity: 0;
+    }
+  }
+
+  & .button {
+    display: flex;
+    margin-bottom: var(--spacing-1);
+
+    @media (--screen-phone-large) {
+      margin-bottom: 0;
+      display: inline-flex;
     }
   }
 
