--- a/src/assets/css/_variables.media.pcss
+++ b/src/assets/css/_variables.media.pcss
@@ -1,3 +1,4 @@
+@custom-media --screen-phone-medium screen and (min-width: 30rem); /* 480px */
 @custom-media --screen-phone-large screen and (min-width: 35.5rem); /* 568px */
 @custom-media --screen-tablet-small screen and (min-width: 48rem); /* 768px */
 @custom-media --screen-desktop-small screen and (min-width: 64rem); /* 1024px */
