--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,6 +2,7 @@
 @import "_layout.footer.pcss";
 
 @import "_component.card.pcss";
+@import "_component.slider.pcss";
 
 @import "_block.about.pcss";
 @import "_block.portfolio.pcss";
