Content and cleanup

--- a/src/_includes/layouts/partials/about.njk
+++ b/src/_includes/layouts/partials/about.njk
@@ -1,4 +1,4 @@
-<section class="u-container u-container--larger about splide" data-splide='{"perPage":1}' id="js-about">
+<section class="u-container u-container--larger about splide" id="js-about">
     <div class="splide__track">
         <article class="about__list splide__list">
             {% for about in collections.about %}
