--- a/src/_includes/layouts/partials/head.njk
+++ b/src/_includes/layouts/partials/head.njk
@@ -53,4 +53,4 @@
           {% else %}
             <link rel="stylesheet" href="/css/index.css" type="text/css"/>
           {% endif %}
-          <link rel="preload" href="/css/swiper.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/></head>
+          <link rel="preload" href="/css/splide.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/></head>
