--- a/src/assets/css/_setup.icons.pcss
+++ b/src/assets/css/_setup.icons.pcss
@@ -1,14 +1,13 @@
 @font-face {
-  font-family: "devstar";
-  src: url("/assets/fonts/devstar.ttf?qvbl0d") format("truetype"),
-    url("/assets/fonts/devstar.woff?qvbl0d") format("woff");
+  font-family: 'devstar';
+  src: url('/assets/fonts/devstar.woff2?qvbl0d') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
 .icon {
-  font-family: "devstar" !important;
+  font-family: 'devstar' !important;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -21,47 +20,47 @@
 }
 
 .icon--stack:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon--heart:before {
-  content: "\f004";
+  content: '\f004';
 }
 .icon--image:before {
-  content: "\f03e";
+  content: '\f03e';
 }
 .icon--social-twitter:before {
-  content: "\f081";
+  content: '\f081';
 }
 .icon--social-facebook:before {
-  content: "\f082";
+  content: '\f082';
 }
 .icon--social-linkedin:before {
-  content: "\f08c";
+  content: '\f08c';
 }
 .icon--social-github:before {
-  content: "\f092";
+  content: '\f092';
 }
 .icon--video:before {
-  content: "\f16a";
+  content: '\f16a';
 }
 .icon--quotes-left:before {
-  content: "\e977";
+  content: '\e977';
 }
 .icon--trophy:before {
-  content: "\e99e";
+  content: '\e99e';
 }
 .icon--star-full:before {
-  content: "\e9d9";
+  content: '\e9d9';
 }
 .icon--arrow-up:before {
-  content: "\ea3a";
+  content: '\ea3a';
 }
 .icon--arrow-right:before {
-  content: "\ea3c";
+  content: '\ea3c';
 }
 .icon--arrow-down:before {
-  content: "\ea3e";
+  content: '\ea3e';
 }
 .icon--arrow-left:before {
-  content: "\ea40";
+  content: '\ea40';
 }
