--- a/src/assets/css/_variables.typography.pcss
+++ b/src/assets/css/_variables.typography.pcss
@@ -1,24 +1,23 @@
 :root {
-  --font-size-6: calc(var(--font-size-5) * var(--typography-scale));
-  --font-size-5: calc(var(--font-size-4) * var(--typography-scale));
-  --font-size-4: calc(var(--font-size-3) * var(--typography-scale));
-  --font-size-3: calc(var(--font-size-2) * var(--typography-scale));
-  --font-size-2: calc(var(--font-size-1) * var(--typography-scale));
-  --font-size-1: calc(var(--font-size-0) * var(--typography-scale));
+  --font-size-6: calc(var(--font-size-5) * var(--ms));
+  --font-size-5: calc(var(--font-size-4) * var(--ms));
+  --font-size-4: calc(var(--font-size-3) * var(--ms));
+  --font-size-3: calc(var(--font-size-2) * var(--ms));
+  --font-size-2: calc(var(--font-size-1) * var(--ms));
+  --font-size-1: calc(var(--font-size-0) * var(--ms));
   --font-size-0: 1rem;
-  --font-size-n1: calc(var(--font-size-0) / var(--typography-scale));
-  --font-size-n2: calc(var(--font-size-n1) / var(--typography-scale));
-  --typography-scale: 1.333;
+  --font-size-n1: calc(var(--font-size-0) / var(--ms));
+  --font-size-n2: calc(var(--font-size-n1) / var(--ms));
+  --ms: 1.333;
 
   --line-height: 1.625;
 
-  --font-family-primary: "Oswald", "Avenir Next Condensed Medium",
-    "Arial Narrow", "Franklin Gothic Bold", sans-serif;
-  --font-family-secondary: "Spartan", "Segoe UI", Roboto, Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-primary: 'Oswald', 'Avenir Next Condensed Medium',
+    'Arial Narrow', 'Franklin Gothic Bold', sans-serif;
+  --font-family-secondary: 'Spartan', 'Segoe UI', Roboto, Helvetica, Arial,
+    sans-serif;
 
   --font-weight-regular: 400;
-  --font-weight-medium: 500;
   --font-weight-bold: 700;
 
   --transition-easing: cubic-bezier(0.45, 0.05, 0.55, 0.95);
