--- a/src/_includes/layouts/partials/sliders.njk
+++ b/src/_includes/layouts/partials/sliders.njk
@@ -1,75 +1,2 @@
 <script onload="init()" async="async" src="/assets/js/splide.min.js"></script>
-<script>
-    function init() {
-        new Splide('#js-about', {
-            mediaQuery: "min",
-            arrows: false,
-            breakpoints: {
-                1280: {
-                    perPage: 3
-                }
-            }
-        }).mount();
-        const featured = new Splide('#js-featured-images', {
-            mediaQuery: "min",
-            type: "loop",
-            perPage: 1,
-            heightRatio: 0.75,
-            focus: "center",
-            pagination: false,
-            perMove: 1,
-            updateOnMove: true,
-            breakpoints: {
-                768: {
-                    updateOnMove: true,
-                    type: "loop",
-                    perPage: 1.5,
-                    heightRatio: 0.4,
-                    focus: "center",
-                    perMove: 1
-                },
-                1360: {
-                    updateOnMove: true,
-                    type: "loop",
-                    perPage: 1.5,
-                    heightRatio: 1,
-                    direction: "ttb",
-                    focus: "center",
-                    perMove: 1
-                }
-            }
-        }).mount();
-        featured.on("move", function (newIndex) {
-            document
-                .querySelector(".featured-projects .project-card.project-card--active")
-                .classList
-                .remove("project-card--active");
-            document
-                .getElementById("js-featured-content-" + (
-                    newIndex + 1
-                ))
-                .classList
-                .add("project-card--active");
-        });
-        new Splide('#js-testimonials', {
-            mediaQuery: "min",
-            pagination: false,
-            type: "fade",
-            rewind: true,
-            breakpoints: {
-                768: {
-                    pagination: false,
-                    type: "fade",
-                    rewind: true,
-                    heightRatio: 0.92
-                },
-                880: {
-                    pagination: false,
-                    type: "fade",
-                    rewind: true,
-                    heightRatio: 0.7
-                }
-            }
-        }).mount();
-    }
-</script>
+<script>function init(){new Splide("#js-about",{mediaQuery:"min",arrows:!1,breakpoints:{1280:{perPage:3}}}).mount(),new Splide("#js-featured-images",{mediaQuery:"min",type:"loop",perPage:1,heightRatio:.75,focus:"center",pagination:!1,perMove:1,updateOnMove:!0,breakpoints:{768:{updateOnMove:!0,type:"loop",perPage:1.5,heightRatio:.4,focus:"center",perMove:1},1360:{updateOnMove:!0,type:"loop",perPage:1.5,heightRatio:1,direction:"ttb",focus:"center",perMove:1}}}).mount().on("move",function(e){document.querySelector(".featured-projects .project-card.project-card--active").classList.remove("project-card--active"),document.getElementById("js-featured-content-"+(e+1)).classList.add("project-card--active")}),new Splide("#js-testimonials",{mediaQuery:"min",pagination:!1,type:"fade",rewind:!0,breakpoints:{768:{pagination:!1,type:"fade",rewind:!0,heightRatio:.92},880:{pagination:!1,type:"fade",rewind:!0,heightRatio:.7}}}).mount()}</script>
