--- a/src/assets/css/_block.hero.pcss
+++ b/src/assets/css/_block.hero.pcss
@@ -37,12 +37,12 @@
     }
 
     & circle {
-      animation: fadeOut 10s var(--transition-easing) alternate infinite;
+      animation: moveOut 10s var(--transition-easing) alternate infinite;
       opacity: 0.8;
 
       &:nth-child(2n) {
         transform: scale3d(0.75, 0.75, 0.75);
-        animation-name: fadeIn;
+        animation-name: moveIn;
         opacity: 0.3;
         animation-duration: 6s;
         animation-delay: 0.5s;
@@ -122,27 +122,5 @@
 
   &__list-item {
     padding-bottom: var(--spacing-n1);
-  }
-}
-
-@keyframes fadeOut {
-  0% {
-    opacity: 0.8;
-    transform: scale3d(1, 1, 1);
-  }
-  100% {
-    opacity: 0.3;
-    transform: scale3d(0.75, 0.75, 0.75);
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    transform: scale3d(0.75, 0.75 0.75);
-    opacity: 0.3;
-  }
-  100% {
-    opacity: 0.8;
-    transform: scale3d(1, 1, 1);
   }
 }
