--- a/src/assets/css/_setup.page.pcss
+++ b/src/assets/css/_setup.page.pcss
@@ -24,19 +24,11 @@ body {
   min-height: 100%;
 }
 
-/*
-    Typographic tweaks!
-    4. Add accessible line-height
-    5. Improve text rendering
-  */
 body {
-  line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/*
-    6. Improve media defaults
-  */
+
 img,
 picture,
 video,
@@ -54,10 +46,7 @@ img {
 /*
     7. Remove built-in form typography styles
   */
-input,
-button,
-textarea,
-select {
+button {
   font: inherit;
 }
 /*
@@ -65,11 +54,7 @@ select {
   */
 p,
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h2 {
   overflow-wrap: break-word;
 }
 
