--- a/src/assets/css/_block.banner.pcss
+++ b/src/assets/css/_block.banner.pcss
@@ -11,10 +11,6 @@
 
   &__container {
     font-size: clamp(var(--font-size-1), 2vw + 1rem, var(--font-size-3));
-    line-height: clamp(
-      calc(var(--spacing-1) + var(--spacing-n1)),
-      4vw + 1rem,
-      var(--spacing-3)
-    );
+    line-height: clamp(var(--spacing-2), 4vw + 1rem, var(--spacing-3));
   }
 }
